<?xml version="1.0"?>
<package format="2">
  <name>gui</name>
  <version>0.0.0</version>
  <description>
    The gui package provides a Qt/QML-based graphical user interface for the MedMon system.
    It visualizes sensor data and allows for interactive control of the EKG filter.
  </description>

  <maintainer email="your_email@example.com">Vipin</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>qtdeclarative5-dev</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>qtbase5-dev</exec_depend>
  <exec_depend>qtdeclarative5-dev</exec_depend>

  <export>
  </export>
</package>