<?xml version="1.0"?>
<package format="2">
  <name>launch_files</name>
  <version>0.0.0</version>
  <description>The launch_files package</description>

  <maintainer email="user@todo.todo">TODO: Maintainer Name</maintainer>

  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gui</exec_depend>
  <exec_depend>sensor_sim</exec_depend>

  <export>
  </export>
</package>