<?xml version="1.0"?>
<package format="2">
  <name>launch_files</name>
  <version>0.0.0</version>
  <description>
    The launch_files package contains launch files for the MedMon system.
    These launch files define the ROS nodes and parameters to launch for the system.
  </description>

  <maintainer email="your_email@example.com">Vipin</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>gui</exec_depend>
  <exec_depend>sensor_sim</exec_depend>

  <export>
  </export>
</package>