<?xml version="1.0"?>
<package format="2">
  <name>sensor_sim</name>
  <version>0.0.0</version>
  <description>
    The sensor_sim package simulates medical sensor data, including heart rate, blood pressure, and EKG signals.
  </description>

  <maintainer email="your_email@example.com">Vipin</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>scipy</build_depend>
  <export>
  </export>
</package>